--- a/index.html
+++ b/index.html
@@ -6,30 +6,25 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <meta content="Radhey Mishra - Personal CV" name="keywords" />
     <meta content="Radhey Mishra - Personal CV" name="description" />
-
     <!-- Favicon -->
     <link href="asset/img/favicon.ico" rel="icon" />
-
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Averia+Serif+Libre:wght@400;700&family=Poppins&display=swap"
       rel="stylesheet"
     />
-
     <!-- Font Awesome -->
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css"
       rel="stylesheet"
     />
-
     <!-- Libraries Stylesheet -->
     <link
       href="asset/lib/owlcarousel/assets/owl.carousel.min.css"
       rel="stylesheet"
     />
     <link href="asset/lib/lightbox/css/lightbox.min.css" rel="stylesheet" />
-
     <!-- Customized Bootstrap Stylesheet -->
     <link href="asset/css/style.css" rel="stylesheet" />
   </head>
@@ -60,7 +55,12 @@
             <a class="mx-2" href="#"><i class="fab fa-youtube"></i></a>
           </div>
           <div class="d-flex align-items-end justify-content-between">
-            <a href="./content/resume.pdf" target="_blank" class="btn btn-block border-right">Download CV</a>
+            <a
+              href="./content/resume.pdf"
+              target="_blank"
+              class="btn btn-block border-right"
+              >Download CV</a
+            >
             <a href="#contact" class="btn btn-block btn-scroll">Contact Me</a>
           </div>
         </div>
