changes in portfoliio

--- a/index.html
+++ b/index.html
@@ -446,8 +446,8 @@
                 </div>
               </div>
               <div class="row portfolio-container">
-                <div class="col-md-6 mb-4 portfolio-item first">
-                  <div class="position-relative overflow-hidden mb-2">
+                <div class="col-md-4 portfolio-item first">
+                  <div class="position-relative overflow-hidden">
                     <img
                       class="img-fluid w-100"
                       src="asset/img/portfolio-1.jpg"
@@ -465,8 +465,8 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-md-6 mb-4 portfolio-item second">
-                  <div class="position-relative overflow-hidden mb-2">
+                <div class="col-md-4 portfolio-item second">
+                  <div class="position-relative overflow-hidden">
                     <img
                       class="img-fluid w-100"
                       src="asset/img/portfolio-2.jpg"
@@ -484,8 +484,8 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-md-6 mb-4 portfolio-item first">
-                  <div class="position-relative overflow-hidden mb-2">
+                <div class="col-md-4 portfolio-item first">
+                  <div class="position-relative overflow-hidden">
                     <img
                       class="img-fluid w-100"
                       src="asset/img/portfolio-3.jpg"
@@ -503,8 +503,8 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-md-6 mb-4 portfolio-item second">
-                  <div class="position-relative overflow-hidden mb-2">
+                <div class="col-md-4 portfolio-item second">
+                  <div class="position-relative overflow-hidden">
                     <img
                       class="img-fluid w-100"
                       src="asset/img/portfolio-4.jpg"
@@ -522,18 +522,18 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-md-6 mb-4 portfolio-item third">
-                  <div class="position-relative overflow-hidden mb-2">
+                <div class="col-md-4 portfolio-item third">
+                  <div class="position-relative overflow-hidden">
                     <img
                       class="img-fluid w-100"
-                      src="asset/img/portfolio-3.jpg"
+                      src="asset/img/portfolio-5.jpg"
                       alt=""
                     />
                     <div
                       class="portfolio-btn d-flex align-items-center justify-content-center"
                     >
                       <a
-                        href="asset/img/portfolio-3.jpg"
+                        href="asset/img/portfolio-5.jpg"
                         data-lightbox="portfolio"
                       >
                         <i class="fa fa-4x fa-plus text-white"></i>
@@ -541,18 +541,18 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-md-6 mb-4 portfolio-item third">
-                  <div class="position-relative overflow-hidden mb-2">
+                <div class="col-md-4 portfolio-item third">
+                  <div class="position-relative overflow-hidden">
                     <img
                       class="img-fluid w-100"
-                      src="asset/img/portfolio-4.jpg"
+                      src="asset/img/portfolio-6.jpg"
                       alt=""
                     />
                     <div
                       class="portfolio-btn d-flex align-items-center justify-content-center"
                     >
                       <a
-                        href="asset/img/portfolio-4.jpg"
+                        href="asset/img/portfolio-6.jpg"
                         data-lightbox="portfolio"
                       >
                         <i class="fa fa-4x fa-plus text-white"></i>
@@ -560,18 +560,18 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-md-6 mb-4 portfolio-item four">
-                  <div class="position-relative overflow-hidden mb-2">
+                <div class="col-md-4 portfolio-item four">
+                  <div class="position-relative overflow-hidden">
                     <img
                       class="img-fluid w-100"
-                      src="asset/img/portfolio-3.jpg"
+                      src="asset/img/portfolio-7.jpg"
                       alt=""
                     />
                     <div
                       class="portfolio-btn d-flex align-items-center justify-content-center"
                     >
                       <a
-                        href="asset/img/portfolio-3.jpg"
+                        href="asset/img/portfolio-7.jpg"
                         data-lightbox="portfolio"
                       >
                         <i class="fa fa-4x fa-plus text-white"></i>
@@ -579,18 +579,18 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-md-6 mb-4 portfolio-item four">
-                  <div class="position-relative overflow-hidden mb-2">
+                <div class="col-md-4 portfolio-item four">
+                  <div class="position-relative overflow-hidden">
                     <img
                       class="img-fluid w-100"
-                      src="asset/img/portfolio-4.jpg"
+                      src="asset/img/portfolio-8.jpg"
                       alt=""
                     />
                     <div
                       class="portfolio-btn d-flex align-items-center justify-content-center"
                     >
                       <a
-                        href="asset/img/portfolio-4.jpg"
+                        href="asset/img/portfolio-8.jpg"
                         data-lightbox="portfolio"
                       >
                         <i class="fa fa-4x fa-plus text-white"></i>
@@ -622,11 +622,11 @@
                     development project.
                   </h4>
                   <div class="d-flex align-items-center">
-                    <img
+                    <!-- <img
                       class="img-fluid"
                       src="asset/img/testimonial-1.jpg"
                       style="width: 60px; height: 60px"
-                    />
+                    /> -->
                     <div class="pl-3">
                       <h5 class="text-primary m-0">Info System</h5>
                       <i>AVP</i>
@@ -643,11 +643,11 @@
                     invaluable asset to any project.
                   </h4>
                   <div class="d-flex align-items-center">
-                    <img
+                    <!-- <img
                       class="img-fluid"
                       src="asset/img/testimonial-2.jpg"
                       style="width: 60px; height: 60px"
-                    />
+                    /> -->
                     <div class="pl-3">
                       <h5 class="text-primary m-0">Hub to bid</h5>
                       <i>CEO</i>
@@ -664,11 +664,11 @@
                     automation virtuoso every project dreams of.
                   </h4>
                   <div class="d-flex align-items-center">
-                    <img
+                    <!-- <img
                       class="img-fluid"
                       src="asset/img/testimonial-3.jpg"
                       style="width: 60px; height: 60px"
-                    />
+                    /> -->
                     <div class="pl-3">
                       <h5 class="text-primary m-0">Client Name</h5>
                       <i>Profession</i>
