--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-md-4 portfolio-item second">
+                <div class="col-md-4 portfolio-item first">
                   <div class="position-relative overflow-hidden">
                     <img
                       class="img-fluid w-100"
@@ -522,7 +522,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-md-4 portfolio-item third">
+                <div class="col-md-4 portfolio-item second">
                   <div class="position-relative overflow-hidden">
                     <img
                       class="img-fluid w-100"
@@ -553,6 +553,25 @@
                     >
                       <a
                         href="asset/img/portfolio-6.jpg"
+                        data-lightbox="portfolio"
+                      >
+                        <i class="fa fa-4x fa-plus text-white"></i>
+                      </a>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-md-4 portfolio-item third">
+                  <div class="position-relative overflow-hidden">
+                    <img
+                      class="img-fluid w-100"
+                      src="asset/img/portfolio-2.jpg"
+                      alt=""
+                    />
+                    <div
+                      class="portfolio-btn d-flex align-items-center justify-content-center"
+                    >
+                      <a
+                        href="asset/img/portfolio-2.jpg"
                         data-lightbox="portfolio"
                       >
                         <i class="fa fa-4x fa-plus text-white"></i>
